[gd_scene load_steps=3 format=3 uid="uid://q1u2e3s4t5i6o7n8"]

[ext_resource type="Script" path="res://question_portal.gd" id="1_1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 64)

[node name="QuestionPortal" type="Area2D"]
script = ExtResource("1_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Visual" type="Node2D" parent="."]

[node name="OuterRing" type="ColorRect" parent="Visual"]
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
color = Color(0.3, 0.9, 1, 0.4)

[node name="MiddleRing" type="ColorRect" parent="Visual"]
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
color = Color(0.1, 0.8, 1, 0.6)

[node name="InnerCore" type="ColorRect" parent="Visual"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.2, 0.9, 1, 1)

[node name="Center" type="ColorRect" parent="Visual"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 1, 1, 1)

[node name="CenterGlow" type="ColorRect" parent="Visual"]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0, 1, 1, 0.5)
z_index = -1

[node name="Sparkle1" type="ColorRect" parent="Visual"]
offset_left = -30.0
offset_top = -30.0
offset_right = -28.0
offset_bottom = -28.0
color = Color(1, 1, 0.5, 1)

[node name="Sparkle2" type="ColorRect" parent="Visual"]
offset_left = 28.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -28.0
color = Color(1, 1, 0.5, 1)

[node name="Sparkle3" type="ColorRect" parent="Visual"]
offset_left = -30.0
offset_top = 28.0
offset_right = -28.0
offset_bottom = 30.0
color = Color(1, 1, 0.5, 1)

[node name="Sparkle4" type="ColorRect" parent="Visual"]
offset_left = 28.0
offset_top = 28.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(1, 1, 0.5, 1)

[node name="Pixel1" type="ColorRect" parent="Visual"]
offset_left = -28.0
offset_top = -28.0
offset_right = -26.0
offset_bottom = -26.0
color = Color(0, 1, 1, 1)

[node name="Pixel2" type="ColorRect" parent="Visual"]
offset_left = 26.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = -26.0
color = Color(0, 1, 1, 1)

[node name="Pixel3" type="ColorRect" parent="Visual"]
offset_left = -28.0
offset_top = 26.0
offset_right = -26.0
offset_bottom = 28.0
color = Color(0, 1, 1, 1)

[node name="Pixel4" type="ColorRect" parent="Visual"]
offset_left = 26.0
offset_top = 26.0
offset_right = 28.0
offset_bottom = 28.0
color = Color(0, 1, 1, 1)

[node name="QuestionMark" type="Node2D" parent="Visual"]
position = Vector2(0, -10)

[node name="Q1" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = -5.0
offset_top = -10.0
offset_right = 5.0
offset_bottom = -8.0
color = Color(0.1, 0.1, 0.3, 1)

[node name="Q2" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = -6.0
offset_top = -6.0
offset_right = -4.0
offset_bottom = -2.0
color = Color(0, 0, 0, 1)

[node name="Q3" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = 4.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 0.0
color = Color(0, 0, 0, 1)

[node name="Q4" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = -4.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = 0.0
color = Color(0, 0, 0, 1)

[node name="Q5" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = 0.0
offset_top = 0.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(0, 0, 0, 1)

[node name="Q6" type="ColorRect" parent="Visual/QuestionMark"]
offset_left = 0.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 6.0
color = Color(0, 0, 0, 1)
